# gnome-session-restore

./: Cargo.toml  LICENSE-MIT  Makefile  README.md  generate-testset.sh  testset.list
src/: dbus.rs  main.rs
src/find_command/: mod.rs
src/find_command/methods/: mod.rs  partial_match_similarity.rs
src/gdbus/: meta_window.rs  mod.rs
src/gdbus/extensions/: extension_info.rs  mod.rs
src/js/: get_n_monitors.js  list_all_windows.js  move_window_by_class.js.handlebars
src/session/: find_command.rs  mod.rs
