[package]
name = "gnome-session-restore"
edition = "2018"
version = "0.1.0"
authors = ["Liss Heidrich"]
description = "Save and restore gnome sessions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.2"
include_js = {version = "0.1.1", path = "../include_js/include_js"}
regex = "1.5"
serde = "1.0.125"
serde_ini = "0.2.0"
serde_json = "1.0.64"
shell-words = "1.0.0"
shellexpand = "2.1.0"
thiserror = "1.0.24"
which = "4.1.0"
zbus = "1.9.1"
