[package]
name = "gnome-session-restore"
edition = "2021"
version = "0.5.0"
authors = ["Liss Heidrich"]
description = "Save and restore gnome sessions"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
regex = "1.5"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
zbus = "1.9.2"
zvariant = "2.10.0"
strsim = "0.10.0"
gio = "0.14.8"
xdg = "2.4.1"
